# agent-preneur

./: .env.example  CLAUDE.md  Makefile  README.md  pitch.md  seed_spec.md
05-engineering/: .env.example  .gitignore  AGENT_TASK.md  Dockerfile  Dockerfile.agent  Makefile  ROADMAP.md  RUNBOOK.md  alembic.ini  cow.csv  docker-compose.agent.yml  docker-compose.yml  pyproject.toml  spec.md
05-engineering/alembic/: env.py
05-engineering/alembic/versions/: 001_initial_schema.py  002_ml_columns.py  003_stock_snapshots.py  004_fred_macro.py  005_edgar_fundamentals.py  006_snapshot_date.py  007_add_skew.py
05-engineering/experiments/: finance-v1.yaml  finance-v2-claude-retrieval.yaml  finance-v3-fred.yaml  finance-v3-gdelt.yaml  finance-v4-edgar.yaml  iteration-log.md  stock-ml.yaml  stock-v1-fast.yaml  stock-v1.yaml  stock-v2-claude.yaml  v1-dry-run.yaml  v1.yaml  v2-aggregator.yaml  v2-claude-retrieval.yaml  v3-gdelt.yaml  v3-ml.yaml
05-engineering/scripts/: agent_entrypoint.sh  backtest_stocks.py  compare.py  evaluate.py  fetch_edgar_fundamentals.py  fetch_snapshots.py  fetch_snapshots_extended.py  forecast.py  ingest.py  label_outcomes.py  notify.py  polymarket_forecast.py  populate_fred_macro.py  resolve.py  results_summary.py  run.py  show_predictions.py  stock_forecast.py  train_stocks.py
05-engineering/tasks/: backlog.md
05-engineering/tests/: test_corpus_ingestion.py  test_metaculus_ingestion.py  test_ml_predictor.py  test_offline_loop.py  test_retrieval.py  test_scoring.py  test_stock_features.py  test_stock_predictor.py  test_synthesis.py
(+56 files in other folders)
